# moderngl-window

./: .flake8  .gitatttributes  .gitignore  .pylintrc  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  make.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: lint.yml  pythonpackage.yml
docs/: conf.py  index.rst  requirements.txt
docs/guide/: basic_usage.rst  custom_usage.rst  event_guide.rst  index.rst  install.rst  resource_system.rst  window_guide.rst
docs/reference/: finders.rst  geometry.rst  index.rst  loaders.rst  meta.rst  moderngl_window.rst  resources.rst  scene.rst  screenshot.rst  settings.conf.settings.rst  timers.rst
docs/reference/context/: backends.rst  base.rst  basewindow.rst  glfw.window.rst  headless.window.rst  index.rst  pyglet.window.rst  pyqt5.window.rst  pyside2.window.rst  sdl2.window.rst  windowconfig.rst
docs/reference/finders/: base.rst  data.rst  index.rst  program.rst  scene.rst  texture.rst
docs/reference/loaders/: array.rst  base.rst  binary.rst  gltf2.rst  index.rst  json.rst  separate.rst  single.rst  stl.rst  t2d.rst  text.rst  wavefront.rst
docs/reference/meta/: base.rst  data.rst  index.rst  program.rst  scene.rst  texture.rst
docs/reference/opengl/: index.rst  projection.rst  vao.rst
docs/reference/resources/: base.rst  data.rst  index.rst  programs.rst  scenes.rst  textures.rst
docs/reference/scene/: camera.rst  index.rst  keyboardcamera.rst  material.rst  materialtexture.rst  mesh.rst  meshprogram.rst  node.rst  scene.rst
docs/reference/timers/: base.rst  clock.rst  index.rst
docs/reference/utils/: index.rst  keymaps.rst  module_loading.rst  scheduler.rst
examples/: README.md  base.py  basic_windowconfig.py  cube_model.py  cube_simple.py  cubes.py  custom_config.py  custom_config_class.py  custom_config_functions.py  drag_drop_file_input.py  fullscreen_switching.py  geometry_bbox.py  geometry_cube.py  geometry_cube_instanced.py  geometry_lines.py  geometry_quad_fs.py  geometry_quad_fs_mouse_scroll.py  gltf_scenes.py  headless.py  integration_imgui.py  integration_imgui_image.py  moderngl_logo.py  modify_parser.py  orbit_camera.py  quit_confirm.py  requirements.txt  scheduling.py  scheduling_example.py  simple_cube.py  skybox_cubemap.py  ssao.py  text_simple.py  texture_array.py  uniform_block.py  video.py  window_config.py  window_events.py  with_pyopengl.py
examples/advanced/: animated_gif.py  animated_sprites.py  base.py  boids.py  boids2.py  compute_render_to_texture.py  fragment_picking.py  navier_stokes.py  pygame2.py  pygame2_background_image.py  pygame2_simple.py  shader_includes.py  shadow_mapping.py  shadow_mapping_56.py  tetrahedral_mesh.py  voxel_cubes.py  water.py
examples/custom_setup/: main.py
examples/moderngl_logo/: main.py
examples/resources/data/tetrahedral_mesh/: README.md  element_nodes.npy  mesh_nodes.npy
examples/resources/programs/: blend_include.glsl  cube_simple.glsl  cube_simple_instanced.glsl  cube_simple_texture.glsl  cube_texture_array.glsl  cubemap.glsl  texture_flipped.glsl  texture_int.glsl  texture_mouse_scroll.glsl
examples/resources/scenes/: REAME.md  crate.obj.json
examples/resources/videos/: README.md
examples/simple_cube/: main.py
examples/window_events/: main.py
extras/: release.md
moderngl_window/: __init__.py  base.py  exceptions.py  screenshot.py  utils.py
moderngl_window/atlas/: base.py  simple_atlas.py
moderngl_window/base/: __init__.py  keys.py  window.py
moderngl_window/capture/: __init__.py  base.py  ffmpeg.py  video_rec.py
moderngl_window/conf/: __init__.py  default.py
moderngl_window/context/base/: __init__.py  config.py  keys.py  window.py
moderngl_window/context/glfw/: __init__.py  keys.py  window.py
moderngl_window/context/headless/: keys.py  window.py
moderngl_window/context/pygame2/: __init__.py  keys.py  window.py
moderngl_window/context/pyglet/: keys.py  window.py
moderngl_window/context/pyqt5/: keys.py  window.py
moderngl_window/context/pyside2/: keys.py  window.py
moderngl_window/context/sdl2/: __init__.py  keys.py  window.py
moderngl_window/context/tk/: __init__.py  keys.py  window.py
moderngl_window/finders/: base.py  data.py  program.py  scene.py  scenes.py  texture.py  textures.py
moderngl_window/geometry/: __init__.py  attributes.py  bbox.py  cube.py  plane.py  quad.py  sphere.py
moderngl_window/glfw/: keys.py  window.py
moderngl_window/integrations/: imgui.py  imgui_bundle.py
moderngl_window/loaders/: base.py
moderngl_window/loaders/data/: binary.py  json.py  text.py
moderngl_window/loaders/program/: separate.py  single.py
moderngl_window/loaders/scene/: base.py  gltf.py  gltf2.py  stl.py  stl_loader.py  wavefront.py
moderngl_window/loaders/texture/: array.py  cube.py  icon.py  pillow.py  t2d.py
moderngl_window/meta/: __init__.py  base.py  data.py  program.py  scene.py  texture.py
moderngl_window/opengl/: program.py  projection.py  types.py  vao.py
moderngl_window/pyglet/: keys.py  window.py
moderngl_window/pyqt5/: keys.py  window.py
moderngl_window/resources/: __init__.py  base.py  data.py  decorators.py  meta.py  programs.py  scenes.py  textures.py  tracks.py
moderngl_window/scene/: __init__.py  camera.py  material.py  mesh.py  node.py  programs.py  projection.py  scene.py
moderngl_window/sdl2/: keys.py  window.py
moderngl_window/text/bitmapped/: __init__.py  base.py  text_2d.py
moderngl_window/timers/: __init__.py  base.py  clock.py  schedule.py
moderngl_window/utils/: __init__.py  keymaps.py  module_loading.py  scheduler.py
tests/: headless.py  requirements.txt  test_attribute_names.py  test_camera.py  test_conf.py  test_docs.py  test_finders.py  test_geometry.py  test_headless.py  test_loaders_data.py  test_loaders_program.py  test_loaders_scene.py  test_loaders_texture.py  test_moderngl_window.py  test_projection.py  test_resource_descriptions.py  test_resources.py  test_scheduler.py  test_screenshot.py  test_shader_source.py  test_timers.py  test_utils.py  test_vao.py  test_windowconfig.py  utils.py
(+75 files in other folders)
