[metadata]
name = moderngl-window
version = 2.4.0
description = A cross platform helper library for ModernGL making window creation and resource loading simple
description-file = README.md
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/moderngl/moderngl_window
author = Einar Forselv
author_email = eforselv@gmail.com
keywords = moderngl, window, context
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Games/Entertainment
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: 3D Rendering
    Topic :: Scientific/Engineering :: Visualization
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    moderngl<6
    pyglet>=1.5,<2
    numpy>=1.16,<2
    pyrr>=0.10.3,<1
    Pillow>=5

[options.packages.find]
include =
    moderngl_window
    moderngl_window.*

[options.extras_require]
pdf = ReportLab>=1.2
PySide2 = PySide2<6
pyqt5 = PyQt5
glfw = glfw
PySDL2 = PySDL2
pywavefront = pywavefront>=1.2.0,<2
trimesh = trimesh>=3.2.6,<4
tk = pyopengltk>=0.0.3
pygame = pygame~=2.0.1
tests = 
    pytest
    tox
    tox-gh-actions
    flake8
    coverage
    pywavefront
    trimesh
    scipy
docs =
    Sphinx
    sphinx-rtd-theme
    sphinxcontrib-napoleon
    doc8

[coverage:run]
source = moderngl_window
